tests/ui/feature-gates/feature-gate-field-projections.stderr
error[E0658]: use of unstable library feature `field_projections`
  --> $DIR/feature-gate-field-projections.rs:3:5
   |
LL | use std::field;
   |     ^^^^^^^^^^
   |
   = note: see issue #145383 <https://github.com/rust-lang/rust/issues/145383> for more information
   = help: add `#![feature(field_projections)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
