tests/ui/feature-gates/feature-gate-field-projections.rs
#![allow(dead_code)]

use std::field; //~ ERROR: use of unstable library feature `field_projections`

fn main() {}
